--- a/index.html
+++ b/index.html
@@ -1,64 +1,74 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<title>BIOMOD-OUC—2014</title>
-<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<link href="css/screen.css" type="text/css" rel="stylesheet" media="screen,projection" />
-</head>
-<body>
-<div id="layout">
-  <div id="header">
-    <h1 id="logo"><a href="#"><img src="img/logo.png" width="240" height="60" /></a></h1>
-    <hr class="noscreen" />
-    <p class="noscreen noprint"> <em>Skip to <a href="#obsah">content</a>, <a href="#nav">navigation</a>.</em> </p>
-    <hr class="noscreen" />
-    <div id="nav" class="box">
-      <ul>
-        <li><a href="#">Home<br />
-          <span>主页</span></a></li>
-        <li><a href="#">Project idea<br />
-          <span>项目创意</span></a></li>
-        <li><a href="#">Team<br />
-          <span>团队</span></a></li>
-        <li><a href="#">Protocol<br />
-          <span>项目报告</span></a></li>
-        <li><a href="#">experiments&results<br />
-          <span>实验与结果</span></a></li>
-        <li><a href="#">Contact<br />
-          <span>联系我们</span></a></li>
-      </ul>
-      <hr class="noscreen" />
+<!DOCTYPE html>
+<html>
+
+  <head>
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="Ouc-biomod.github.io : " />
+
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Ouc-biomod.github.io</title>
+  </head>
+
+  <body>
+
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/OUC-Biomod">View on GitHub</a>
+
+          <h1 id="project_title">Ouc-biomod.github.io</h1>
+          <h2 id="project_tagline"></h2>
+
+        </header>
     </div>
-    <div id="container" class="box">
-     	  <div id="obsah" class="content box">
-        <div class="in">
-          <h2>项目介绍</h2>
-          <p> 项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍</p>
-          <h3>分不同方面介绍:</h3>
-          <ul>
-            <li><a href="#">方面1</a></li>
-            <li><a href="#">方面2</a></li>
-            <li><a href="#">方面3</a></li>
-            <li><a href="#">方面4</a></li>
-          </ul>
-          <h3>这里可以放一个视频</h3>
-          <p> 这里可以放一个视频这里可以放一个视频这里可以放一个视频这里可以放一个视频这里可以放一个视频这里可以放一个视频这里可以放一个视频这里可以放一个视频这里可以放一个视频这里可以放一个视频这里可以放一个视频 </p>
-          <p> 这里可以放一个视频这里可以放一个视频这里可以放一个视频这里可以放一个视频这里可以放一个视频这里可以放一个视频这里可以放一个视频 </p>
-          <p> 这里可以放一个视频这里可以放一个视频这里可以放一个视频这里可以放一个视频这里可以放一个视频这里可以放一个视频这里可以放一个视频这里可以放一个视频这里可以放一个视频这里可以放一个视频这里可以放一个视频</p>
-          <p> 这里可以放一个视频这里可以放一个视频这里可以放一个视频这里可以放一个视频这里可以放一个视频这里可以放一个视频这里可以放一个视频这里可以放一个视频</p>
-        </div>
-      </div>
-      <div id="panel-left" class="box panel">
-        <div class="in">
-          <p> <span>这里可以放面包屑</span><br />
-            或者项目大事记之类的 </p>
-          <p> <span>这里可以放面包屑</span><br />
-            或者项目大事记之类的 </p>
-        </div>
-      </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <h3>
+<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+
+<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+
+<pre><code>$ cd your_repo_root/repo_name
+$ git fetch origin
+$ git checkout gh-pages
+</code></pre>
+
+<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+
+<h3>
+<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+
+<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+
+<h3>
+<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+
+<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+
+<h3>
+<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+
+<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+
+<h3>
+<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+
+<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+      </section>
     </div>
-    <div id="footer"> <span class="f-left">&copy; 2014 <a href="#">BIOMOD-OUC-2014</a></span> <span class="f-right">hosted by: <a href="http://blog.liujason.com/" title="伪技术の宅" target="_blank">伪技术の宅</a> </span> </div>
-  </div>
-</div>
-</body>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
+    
+
+  </body>
 </html>
