--- a/idea.html
+++ b/idea.html
@@ -14,17 +14,17 @@
     <hr class="noscreen" />
     <div id="nav" class="box">
       <ul>
-        <li><a href="index.html">Home<br />
+        <li><a href="#">Home<br />
           <span>主页</span></a></li>
-        <li><a href="idea.html">Project idea<br />
+        <li><a href="#">Project idea<br />
           <span>项目创意</span></a></li>
-        <li><a href="team.html">Team<br />
+        <li><a href="#">Team<br />
           <span>团队</span></a></li>
-        <li><a href="protocol.html">Protocol<br />
+        <li><a href="#">Protocol<br />
           <span>项目报告</span></a></li>
-        <li><a href="experiments&results.html">experiments&results<br />
+        <li><a href="#">experiments&results<br />
           <span>实验与结果</span></a></li>
-        <li><a href="contact_us.html">Contact<br />
+        <li><a href="#">Contact<br />
           <span>联系我们</span></a></li>
       </ul>
       <hr class="noscreen" />
