--- a/team.html
+++ b/team.html
@@ -14,7 +14,7 @@
     <hr class="noscreen" />
     <div id="nav" class="box">
       <ul>
-        <li><a href="index.html">Home<br />
+         <li><a href="index.html">Home<br />
           <span>主页</span></a></li>
         <li><a href="idea.html">Project idea<br />
           <span>项目创意</span></a></li>
@@ -32,21 +32,18 @@
     <div id="container" class="box">
      	  <div id="obsah" class="content box">
         <div class="in">
-          <h2>项目介绍</h2>
-          <p> 项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍项目介绍</p>
-          <h3>分不同方面介绍:</h3>
-          <ul>
-            <li><a href="#">方面1</a></li>
-            <li><a href="#">方面2</a></li>
-            <li><a href="#">方面3</a></li>
-            <li><a href="#">方面4</a></li>
-          </ul>
-          <h3>这里可以放一个视频</h3>
-          <p> 这里可以放一个视频这里可以放一个视频这里可以放一个视频这里可以放一个视频这里可以放一个视频这里可以放一个视频这里可以放一个视频这里可以放一个视频这里可以放一个视频这里可以放一个视频这里可以放一个视频 </p>
-          <p> 这里可以放一个视频这里可以放一个视频这里可以放一个视频这里可以放一个视频这里可以放一个视频这里可以放一个视频这里可以放一个视频 </p>
-          <p> 这里可以放一个视频这里可以放一个视频这里可以放一个视频这里可以放一个视频这里可以放一个视频这里可以放一个视频这里可以放一个视频这里可以放一个视频这里可以放一个视频这里可以放一个视频这里可以放一个视频</p>
-          <p> 这里可以放一个视频这里可以放一个视频这里可以放一个视频这里可以放一个视频这里可以放一个视频这里可以放一个视频这里可以放一个视频这里可以放一个视频</p>
-        </div>
+          <h2>我们的团队</h2>
+		  <h2><img src="img/team.jpg" width="480" height="338" /></a></h2>
+          <p>团队介绍团队介绍团队介绍团队介绍团队介绍团队介绍团队介绍团队介绍团队介绍团队介绍团队介绍团队介绍团队介绍团队介绍团队介绍团队介绍团队介绍团队介绍团队介绍团队介绍团队介绍团队介绍团队介绍团队介绍团队介绍团队介绍团队介绍团队介绍团队介绍团队介绍团队介绍团队介绍团队介绍团队介绍团队介绍团队介绍团队介绍团队介绍团队介绍团队介绍团队介绍团队介绍团队介绍团队介绍团队介绍团队介绍团队介绍团队介绍~~~</p>
+          <h3>成员1</h3>
+          照片&介绍&格言？
+		  <h3>成员3</h3>
+          照片&介绍&格言？
+		  <h3>成员4</h3>
+          照片&介绍&格言？
+		  <h3>成员5</h3>
+          照片&介绍&格言？
+          </div>
       </div>
       <div id="panel-left" class="box panel">
         <div class="in">
